--- a/app.css
+++ b/app.css
@@ -9,7 +9,36 @@ body{
 
     margin: auto;
     width: 50;
-    padding: 16px;
+    padding: 20px;
     background-color: palegreen;
     box-shadow: 20px 20px 20px 0px rgb(120, 246, 2);
 }
+
+input[type='text'], 
+input[type='password']{
+
+    width: 100%;
+    padding: 16px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    background-color: whitesmoke;
+}
+
+input[type='text']:focus, 
+input[type='password']:focus{
+
+    background-color: royalblue;
+}
+
+.registerbtn{
+    background-color: rgb(255, 0, 242);
+    color: snow;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin: auto;
+    opacity: 0.8;
+}
+  
+    
